--- a/css/newFeature.css
+++ b/css/newFeature.css
@@ -12,7 +12,7 @@ a.dropdownMenu{
     text-align: center;
 }
 
-<<<<<<< Updated upstream
+
 a.email{
     color: white;
 }
@@ -20,7 +20,7 @@ a.email{
 a.email:hover a.email:focus a.email:active{
     text-decoration: none!important;
     color: #18bc9c;
-};
+}
 
 .img{
     max-width: 250px;
