--- a/css/newFeature.css
+++ b/css/newFeature.css
@@ -39,3 +39,13 @@ div.footer {
       margin: 20px 0;
     }
 }
+
+
+#back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+    background-color: #18bc9c
+}
